# MATLAB-ITK-IO

./: .gitignore  CMakeLists.txt  README.txt
Applications/: CMakeLists.txt  itkRead.cxx  itkRead.m  itkWrite.cxx  itkWrite.m
CMake/: FindMatlab.cmake  ProjectCMakeFunctions.cmake
Modules/IO/: itkReadPipeline.h  itkReadPipeline.hxx  itkWritePipeline.h  itkWritePipeline.hxx
Modules/ITK/: itkCastImageFileWriterBase.h  itkCastImageFileWriterBase.hxx  itkCastVectorImageFileWriter.h  itkCastVectorImageFileWriter.hxx
Source/: CMakeLists.txt  itkRead.cxx  itkRead.m  itkReadPipeline.h  itkReadPipeline.hxx  itkWrite.cxx  itkWrite.m  itkWritePipeline.h  itkWritePipeline.hxx
