CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
IF(COMMAND cmake_policy)
  cmake_policy(VERSION 2.6)
ENDIF(COMMAND cmake_policy)

PROJECT(MatlabITKIO)

set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH})

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/bin CACHE INTERNAL 
  "Executable output directory")
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/bin CACHE INTERNAL
  "Library output directory")

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/CMake)
INCLUDE(ProjectCMakeFunctions)

FIND_PACKAGE(ITK COMPONENTS ITKCommon ITKIOImageBase ITKIONIFTI ITKIONRRD ITKIOMeta REQUIRED)
INCLUDE(${ITK_USE_FILE})

FIND_PACKAGE(Matlab REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Source ${MATLAB_INCLUDE_DIR})
ADD_SUBDIRECTORY(Source)
