CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(VERSION 2.6)
  CMAKE_POLICY(SET CMP0042 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(MatlabITKIO)

set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH})

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/bin CACHE INTERNAL 
  "Executable output directory")
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/bin CACHE INTERNAL
  "Library output directory")

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/CMake)
INCLUDE(ProjectCMakeFunctions)

FIND_PACKAGE(ITK COMPONENTS ITKCommon ITKIOImageBase ITKIONIFTI ITKIONRRD ITKIOMeta ITKIOGDCM REQUIRED)
INCLUDE(${ITK_USE_FILE})

FIND_PACKAGE(Matlab REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Applications ${PROJECT_SOURCE_DIR}/Modules/IO ${PROJECT_SOURCE_DIR}/Modules/ITK ${MATLAB_INCLUDE_DIR})
ADD_SUBDIRECTORY(Applications)
